add team's detail on retrieveFixture endpoint
